objects/Grid_RevenueSchedule__c.object
<CustomObject>
    <fields>
        <fullName>Grid_ActualAmount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_ContractLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line</label>
        <referenceTo>vlocity_cmt__ContractLineItem__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Metric__c</fullName>
        <label>Metric</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring Monthly</fullName>
                </value>
                <value>
                    <fullName>Recurring Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_Model__c</fullName>
        <description>Product model (populated only for the Open Meter, Jobi Meter, Nexi Meter and LVM Meter products)</description>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_OrderSort__c</fullName>
        <label>Order Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_PlannedAmount__c</fullName>
        <label>Planned Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_QuoteLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_Revenue__c</fullName>
        <description>Revenue Master-Detail Relationship</description>
        <label>Revenue</label>
        <referenceTo>Revenue__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Grid_RevenueSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grid_StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Version__c</fullName>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_WeightedRevenue__c</fullName>
        <formula>Grid_PlannedAmount__c* Grid_Revenue__r.Grid_Quote__r.Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Schedule</label>
    <nameField>
        <label>Revenue Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>